# 3DS2Spout

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  install-buildtools.bat  launch-3ds.cmd  run-bridge.cmd
3ds-cam-stream/: Makefile  README.md  example.cfg
3ds-cam-stream/cia/: cia.rsf
3ds-cam-stream/gfx/: generate-icon.py
3ds-cam-stream/include/: camera.h  common.h  effects.h  encoder.h  network.h  touch_ui.h  ui_draw.h
3ds-cam-stream/release/: README.txt
3ds-cam-stream/source/: camera.c  common.c  effects.c  encoder.c  main.c  network.c  qoi_mod.h  touch_ui.c  ui_draw.c
docs/: ARCHITECTURE.md  FORWARDER-FBI.md  index.html
install/: INSTALL.cmd  README.md  check-prerequisites.cmd  check-prerequisites.ps1  generate-guide-pdf.py  install-3ds.cmd  install-3ds.ps1  install-all.ps1  install-dependencies.cmd  install-dependencies.ps1  run-bridge.cmd
pc-bridge/: Cargo.toml  README.md  receiver.py  requirements.txt
pc-bridge/src/: main.rs  osc_relay.rs  protocol.rs  qoi_decoder.rs  spout_sender.rs  udp_receiver.rs
resolume/: SETUP.md  osc-map.toml
scripts/: 3dslink-launch.cmd  README.md  install-pc-bridge-python.cmd  install-pc-bridge-python.ps1  install-pc-bridge.ps1  install-rust.cmd  install-rust.ps1  install-to-3ds.ps1  install-to-3ds.sh  make-release.cmd  make-release.ps1  run-pc-bridge.cmd  run-pc-bridge.ps1
